--- a/Website/Martin-Linux/src/app/app.html
+++ b/Website/Martin-Linux/src/app/app.html
@@ -2,9 +2,10 @@
   <h1>Linux projekt</h1>
 
   <nav>
-    <a href="#">Kezdőlap</a>
-    <a href="#">Disztribúciók</a>
-    <a href="#">Kapcsolat</a>
+    <a routerLink="/" routerLinkActive="active">Kezdőlap</a>
+    <a routerLink="/disztribuciok" routerLinkActive="active">Disztribúciók</a>
+    <a routerLink="/kapcsolat" routerLinkActive="active">Kapcsolat</a>
   </nav>
 </header>
 
+<router-outlet></router-outlet>
