3 darab gomb mükődik

--- a/Website/Martin-Linux/src/app/app.html
+++ b/Website/Martin-Linux/src/app/app.html
@@ -2,7 +2,7 @@
   <h1>Linux projekt</h1>
 
   <nav>
-    <a routerLink="/" routerLinkActive="active">Kezdőlap</a>
+    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Kezdőlap</a>
     <a routerLink="/disztribuciok" routerLinkActive="active">Disztribúciók</a>
     <a routerLink="/kapcsolat" routerLinkActive="active">Kapcsolat</a>
   </nav>
